# vnbot

./: .gitignore  BUNDLE_README.md  CONTENTS.md  README.md  VISUAL_REFERENCES_AND_ANALYSIS.md  VNBOT_SPRITESHEET_REFERENCE.md  WORKLOG.md  index.html  netlify.toml
mvp/: .env.example  .gitignore  LICENSE  Makefile  README.md  netlify.toml  package.json  pnpm-lock.yaml  pyproject.toml
mvp/.github/workflows/: ci.yml  deploy-demo.yml
mvp/apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
mvp/apps/web/public/: manifest.json  sw.js
mvp/apps/web/src/: App.tsx  main.tsx  test-setup.ts
mvp/apps/web/src/components/chat/: ActionProposal.tsx  ChatInput.tsx  FileUpload.tsx  MessageList.tsx
mvp/apps/web/src/components/common/: ErrorBoundary.tsx
mvp/apps/web/src/components/shell/: Sidebar.tsx  TopBar.tsx
mvp/apps/web/src/lib/api/: client.ts  mock.ts
mvp/apps/web/src/lib/store/: ui.ts
mvp/apps/web/src/routes/activity/: ActivityPanel.tsx
mvp/apps/web/src/routes/agents/: AgentsPanel.tsx
mvp/apps/web/src/routes/graph/: GraphPanel.tsx
mvp/apps/web/src/routes/integrations/: IntegrationsPanel.tsx
mvp/apps/web/src/routes/learning/: LearningPanel.tsx
mvp/apps/web/src/routes/lists/: ListsPanel.tsx
mvp/apps/web/src/routes/memory/: MemoryPanel.tsx
mvp/apps/web/src/routes/reminders/: RemindersPanel.tsx
mvp/apps/web/src/routes/settings/: SettingsPanel.tsx
mvp/apps/web/src/routes/skills/: SkillsPanel.tsx
mvp/apps/web/src/routes/today/: TodayPanel.tsx
mvp/apps/web/src/styles/: global.css
mvp/docs/adrs/: 0001-opentelemetry-as-observability-standard.md  0002-no-localstorage-as-database.md  0003-no-zk-claim-with-cloud-llm.md  0006-pixel-art-cyberpunk-visual-language.md  0008-single-user-personal-assistant.md  0010-expanded-file-reader-vision-system.md  0011-hermes-learning-loop-full-implementation.md  0012-multi-llm-cloud-providers.md
mvp/infra/docker/: docker-compose.yml
mvp/services/api/: Dockerfile  alembic.ini  pyproject.toml
mvp/services/api/alembic/: env.py
mvp/services/api/alembic/versions/: 0001_initial.py  0002_add_fts5.py  0003_add_skills_learning_logs.py  0004_add_llm_provider_to_learning_logs.py
mvp/services/api/app/: __init__.py  config.py  dependencies.py  main.py
mvp/services/api/app/api/: __init__.py
mvp/services/api/app/api/v1/: __init__.py  audit.py  briefing.py  chat.py  context.py  exports.py  files.py  graph.py  health.py  learning.py  lists.py  llm.py  memories.py  (+2 more)
mvp/services/api/app/infrastructure/: __init__.py
mvp/services/api/app/schemas/: __init__.py  audit.py  chat.py  exports.py  memories.py
mvp/tests/e2e/: playwright.config.ts
mvp/tests/e2e/specs/: vertical-slice.spec.ts
(+183 files in other folders)
