[project]
name = "vnbot"
version = "0.1.0"
description = "VNBOT — Memoria personal open source, recordatorios confiables y mini-agentes."
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "opentelemetry-exporter-otlp-proto-http>=1.44.0",
]

[tool.uv.workspace]
members = [
    "services/api",
    "packages/domain",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-select = ["I", "B", "C4", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
